fix docker file and readme

--- a/node_app/Dockerfile
+++ b/node_app/Dockerfile
@@ -1,13 +1,9 @@
-# # node_app/Dockerfile
-# FROM node:18-alpine
+FROM node:18-alpine
 
-# WORKDIR /app
-
-# COPY package*.json ./
-# RUN npm install --production
-
-# COPY . .
-
-# EXPOSE 3001
-
-# CMD ["node", "index.js"]
+WORKDIR /app
+COPY package*.json ./
+RUN ls -l /app    # <-- Aquí verificas que los archivos se copiaron bien
+RUN npm install
+COPY . .
+EXPOSE 3001
+CMD ["node", "index.js"]
