--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   flask:
     build: ./flask_app
@@ -8,10 +6,11 @@ services:
       - "5000"
 
   node:
-    build: ./node_app
+    build:
+      context: ./node_app
     container_name: node_app
-    expose:
-      - "3001"
+    ports:
+      - "3001:3001"
     environment:
       - NODE_ENV=production
 
